[gd_scene load_steps=4 format=3 uid="uid://drmuj2qk6dcop"]

[ext_resource type="Script" path="res://Scenes/Levels/room_component.gd" id="1_7sng6"]
[ext_resource type="MeshLibrary" uid="uid://frf7gv1swlqj" path="res://Meshlib/Dungeon_Gray_Tiles.tres" id="2_snqnh"]
[ext_resource type="MeshLibrary" uid="uid://t42yme001d8r" path="res://Meshlib/Decoration.tres" id="3_3ekui"]

[node name="Room_Component" type="Node3D" node_paths=PackedStringArray("Connected_Rooms")]
script = ExtResource("1_7sng6")
Connected_Rooms = [null, null, null, null]
Base_Tiles = ExtResource("2_snqnh")
Deco_Tiles = ExtResource("3_3ekui")

[node name="Base_Tiles" type="GridMap" parent="."]

[node name="Deco_Tiles" type="GridMap" parent="."]
